--- a/aboutme/templates/aboutme/aboutme.html
+++ b/aboutme/templates/aboutme/aboutme.html
@@ -2,9 +2,31 @@
 
 
 {% block acerca_de %}
-
-	<div class="cont_blog"> 
+	<div class="cont_aboutme">	
+		<h2>Joel Gustavo Suarez Rodriguez, 21 años, desarrollador backend</h1>
 		
-	</div>	 
+
+		<h3>Estudiante de Ingeniería de Sistemas de Universidad de los Andes.</h3>
+		<h3>Estudiante de Platzi con conocimientos en software de control de versiones como git.</h3>
+		<h3>Conocimientos en aplicaciones hechas con Django.</h3>
+		<h3>Conocimientos sobre HTML-CSS.</h3>
+		<h3>Actualmente me encuentro especializandome en django y javascript.</h3>
+
+
+		<h2>Objetivos:</h2>
+
+		<h3>Comenzar en el mundo del desarrollo web profesionalmente.</h3>
+
+		<h2>Sobre este proyecto:</h2>
+		<h3>Blog personal montado sobre django y html sencillo.</h3>
+		
+		<div class="cont_contact">
 			
+			<h4>Joel Gustavo Suarez Rodriguez</h4>
+			<h4>Colombia - Santiago de Cali.</h4>
+			<h4>joekgs25@gmail.com</h4>
+			<h4>+57 3227632472.</h4>
+		</div>
+
+	</div>
 {% endblock %}
